# tandem-agents

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.zh-CN.md  RELEASE_NOTES.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.published.yml  docker-compose.yml  pyproject.toml  requirements.txt
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  publish-images.yml
config/: Dockerfile  Dockerfile.control-panel  Dockerfile.engine  Dockerfile.kb  Dockerfile.proxy  agent.yaml  board.yaml  kb_prompts.yaml.example
docs/: ACA_SMOKE_HARNESS.md  AUTONOMOUS_CODING_PYTHON_SDK_GIT_ACCESS.md  CODING_TASKS_WITH_TANDEM.md  CODING_TASK_CONTRACT.md  COMMANDS.md  CONFIG_SCHEMA.md  DOCKER_COMPOSE.md  ENGINE_MANAGEMENT.md  GHCA_CONTAINER_REGISTRY.md  IMAGE_PUBLISHING.md  KANBAN_BOARD.md  LINEAR_ACA_SMOKE_RUNBOOK.md  LOCAL_KANBAN_TEST_GUIDE.md  LOCAL_QUICKSTART.md  MONITORING.md  PORTABLE_AUTOCODER_AGENT_PLAN.md  README.md  REPO_BINDING.md  RUN_STATE_SCHEMA.md  TANDEM_CONTROL_PANEL_INTEGRATION.md  TANDEM_KB_MCP_AND_ACA_OVERVIEW.md  TASK_SOURCES.md  kb_mcp.md
scripts/: bootstrap_config.js  build-containers.sh  entrypoint.sh  git_mcp_test.sh  kb-server-serve.sh  monitor.sh  run.sh  setup-githooks.sh  setup.sh  tandem-control-panel-serve.sh  tandem-engine-serve.sh  tandem-mcp-bootstrap.js  test_browser.py
scripts/hosted/: README.md  bootstrap-server.sh  build-images.sh  bump-release.sh  generate-secrets.sh  host-hardening.sh  install-prereqs.sh  lib.sh  package-bundle.sh  (+10 more)
(+220 files in other folders)
