[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aca"
version = "0.1.0"
description = "ACA: Autonomous Coding Agent control plane"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "packaging>=24.0",
    "psycopg[binary]>=3.2.0",
    "tandem-client>=0.4.14",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.scripts]
aca = "src.aca.cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
starts-with = ["src/"]
