[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tandem-agents"
version = "0.1.0"
description = "Tandem Agents: local Tandem engine, control panel, ACA, and KB stack"
requires-python = ">=3.10"
license = "LicenseRef-Business-Source-License-1.1"
license-files = ["LICENSE", "NOTICE", "COMMERCIAL_LICENSE.md", "THIRD_PARTY_NOTICES.md"]
readme = "README.md"
dependencies = [
    "PyYAML>=6.0",
    "packaging>=24.0",
    "psycopg[binary]>=3.2.0",
    "tandem-client>=0.4.14",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[project.scripts]
aca = "src.tandem_agents.cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true
